--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         >
         <menu class="menu">
           <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-active" href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </menu>
       </nav>
@@ -59,14 +59,17 @@
       <section class="section section-portfolio">
         <div class="container portfolio-list">
         <ul class="portfolio-items-list">
-          <li class="item">
+          <li class="portfoliio-item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio1.jpg"
                 alt="Bank app in white and purple colors."
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Banking App Interface Concept</h3>
                 <p class="tabs-text">App</p>
@@ -75,12 +78,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio2.jpg"
                 alt="A person pays using a terminal with a QR code."
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Cashless payment</h3>
                 <p class="tabs-text">Marketing</p>
@@ -89,12 +95,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio3.jpg"
                 alt="An app for meditation on the phone and the laptop."
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Meditation app</h3>
                 <p class="tabs-text">App</p>
@@ -103,12 +112,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio4.jpg"
                 alt="The hands are holding  the car's steering wheel, and there's a phone mounted on the windshield"
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Taxi Service</h3>
                 <p class="tabs-text">Marketing</p>
@@ -117,12 +129,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio5.jpg"
                 alt="Design of phone wallpapers with various variations"
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Screen illustrations</h3>
                 <p class="tabs-text">Design</p>
@@ -131,12 +146,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio6.jpg"
                 alt="A girl in an orange sweater is smiling, holding a phone and wearing headphones."
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Online courses</h3>
                 <p class="tabs-text">Marketing</p>
@@ -145,12 +163,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio7.jpg"
                 alt="Concept of instagram stories"
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Instagram stories concept</h3>
                 <p class="tabs-text">Design</p>
@@ -159,12 +180,15 @@
           </li>
           <li class="item">
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio8.jpg"
                 alt="A women in light clothes is carrying a basket with vegetables and fruits"
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Organic food</h3>
                 <p class="tabs-text">Web Site</p>
@@ -173,12 +197,15 @@
           </li>
           <li class="item"> 
             <a href="#" class="portfolio-link">
+              <div class="portfolio-card">
               <img
                 src="./images/portfolio9.jpg"
                 alt="A barista is pouring coffee into a cup."
                 width="360"
                 height="300"
               />
+              <p class="card-discription">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-tab">
                 <h3 class="tabs-title">Fresh coffee</h3>
                 <p class="tabs-text">Web Site</p>
@@ -204,28 +231,28 @@
           <p>Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="social-link">
+              <a class="footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="social-link">
+              <a class="footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="social-link">
+              <a class="footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="social-link">
+              <a class="footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
